--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
           <a href="https://namoz-vaqtlari-baxa.netlify.app/" class="card"><img src="./img/namoz-vaqtlari.png" alt=""><span>Namoz vaqtlari</span></a>
           <a href="https://sneakkers.netlify.app/" class="card" target="_blank"><img src="./img/sneackers.png" alt=""><span>Sneakers</span></a>
           <a href="https://baxa-jarvis.netlify.app/" class="card" target="_blank" ><img src="./img/jarvis.png" alt=""> <span>Jarvis</span></a>
-          <a href="https://https://tasbeeh1.netlify.app/" class="card" target="_blank"><img src="./img/tasbex.png" alt=""> <span>Tasbeeh</span></a>
+          <a href="https://tasbeeh-app.netlify.app" class="card" target="_blank"><img src="./img/tasbex.png" alt=""> <span>Tasbeeh</span></a>
           <a href="https://nikeslider.netlify.app/" class="card" target="_blank"><img src="./img/Screenshot_2.png" alt=""> <span>Nike</span></a>
 
         </div>
