--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@
         <h1>Projects</h1>
 
         <div class="cards">
+          <a href="#" class="card" target="_blank"><img src="./img/ebook.gif" alt=""><span>Electron book - soon...</span></a>
           <a href="https://5-baxo.vercel.app/" class="card" target="_blank"><img src="./img/Screenshot_6.png" alt=""><span>5baxo.uz - learning website</span></a>
           <a href="https://baxa-type.netlify.app/" class="card" target="_blank"><img src="./img/baxa-type.png" alt=""><span>Typing game</span></a>
           <a href="https://namoz-vaqtlari-baxa.netlify.app/" class="card"><img src="./img/namoz-vaqtlari.png" alt=""><span>Namoz vaqtlari</span></a>
