--- a/index.html
+++ b/index.html
@@ -50,13 +50,13 @@
             <br>
           
             <br>
-            <b class="c4"> age </b> <b class="c6">:</b> <b class="c5">19</b>
+            <b class="c4"> age </b> <b class="c6">:</b> <b class="c5">20</b>
             <br>
             <br>
             <b class="c4"> study </b> <b class="c6">:</b> <b class="c5">'Najot Ta'lim, Full stack web programming'</b>
           <br>
           <br>
-          <b class="c4"> skils </b> <b class="c6">:</b> <b class="c5"><b class="c2">[</b> "JavaScript", "TypeScript", "Express.js", "Node.js", "React", "MongoDB", "PostgreSQL", "HTML", "CSS", "SASS/SCSS", <b class="c2">]</b></b>
+          <b class="c4"> skils </b> <b class="c6">:</b> <b class="c5"><b class="c2">[</b> "JavaScript", "TypeScript", "Express.js", "Node.js", Telegram bot ,  "React.js", "MongoDB", "PostgreSQL", "HTML", "CSS", "SASS/SCSS",Tailwind CSS, <b class="c2">]</b></b>
           <br>
           
           <br>
